--- a/.cargo/config.toml
+++ b/.cargo/config.toml
@@ -1,2 +1,2 @@
 [alias]
-install-tools = "install cargo-deny cargo-llvm-cov cargo-machete cargo-nextest taplo-cli cargo-action-fmt"
+install-tools = "install cargo-deny cargo-llvm-cov cargo-machete cargo-nextest cargo-action-fmt"
