--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,7 +4,7 @@ version = "0.1.0"
 edition = "2024"
 authors = ["Serey Vilgelm <sergey@vilgelm.com>"]
 description = "A collection of handy utility functions for Rust projects."
-license = "MIT or Apache-2.0"
+license = "MIT OR Apache-2.0"
 homepage = "https://github.com/sv-tools/sniplets-rs"
 repository = "https://github.com/sv-tools/sniplets-rs.git"
 readme = "README.md"
