--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -2,7 +2,7 @@ name: Publish
 
 on:
   push:
-    tags: [ "**/v[0-9]+\.[0-9]+\.[0-9]+" ]
+    tags: [ "**/v[0-9]+.[0-9]+.[0-9]+" ]
 
 env:
   CARGO_TERM_COLOR: always
