--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,4 +21,10 @@ include = [
 [badges]
 maintenance = { status = "actively-developed" }
 
+[features]
+default = []
+quick_xml = ["quick-xml/serialize", "serde/derive"]
+
 [dependencies]
+quick-xml = { version = "0.38.0", optional = true }
+serde = { version = "1.0.219", optional = true }
