--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "sniplets"
-version = "0.1.0"
+version = "0.2.0"
 edition = "2024"
 authors = ["Serey Vilgelm <sergey@vilgelm.com>"]
 description = "A collection of handy utility functions for Rust projects."
@@ -21,4 +21,10 @@ include = [
 [badges]
 maintenance = { status = "actively-developed" }
 
+[features]
+default = []
+quick_xml = ["quick-xml/serialize", "serde/derive"]
+
 [dependencies]
+quick-xml = { version = "0.38.0", optional = true }
+serde = { version = "1.0.219", optional = true }
