--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,8 +23,8 @@ maintenance = { status = "actively-developed" }
 
 [features]
 default = []
-quick_xml = ["quick-xml/serialize", "serde/derive"]
+quick_xml = ["dep:quick-xml", "dep:serde"]
 
 [dependencies]
-quick-xml = { version = "0.38.0", optional = true }
-serde = { version = "1.0.219", optional = true }
+quick-xml = { version = "0.38.0", features = ["serialize"], optional = true }
+serde = { version = "1.0.219", features = ["derive"], optional = true }
